test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_range_expr.draco
proc main() void : a := range(int); corp;

