test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_binary_as_identifier.draco
int binary;
 
proc main() void : a := 1; corp;
